fix: img keep aspect ratio and min w/h, fit in div
- object-fit: cover (keeps ratio while covering parent)
- added some paddings to parent divs

--- a/style.css
+++ b/style.css
@@ -147,36 +147,58 @@ section {
     flex-direction: column;
     align-items: center;
     gap: 4rem;
+    padding: 0 3rem;
 }
 
 .history_images {
     display: flex;
     flex-direction: row;
-    gap: 2rem;
-
+    gap: 6rem;
+    padding: 0 6rem;
 }
 
-.history_images_pairs {
+/* .history_images_pairs {
     display: flex;
     flex-direction: column;
-    gap: 0.4rem;
+    gap: 1rem;
     align-items: center;
     text-align: center;
     max-width: min-content;
-
+    width: 10rem;
+    height: 10rem;
 }
 
 .history_images img {
     width: 10rem;
-    height: 10rem;
+    height: auto;
     max-width: 100%;
     max-height: 100%;
     min-width: 5rem;
     border: 0.5rem solid #3882F6;
     border-radius: 1rem;
     align-self: flex-start;
+} */
+
+.history_images_pairs {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    min-width: 100px;
+    min-height: 100px;
+}
+
+.history_images img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+        border: 0.5rem solid #3882F6;
+    border-radius: 1rem;
 }
 
 .history_images p {
-    margin: auto 0;
+    margin: 0;
 }
